--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -19,7 +19,7 @@ Passeremo poi agli esercizi 02.
 <P>
     <UL>
     <LI>Ricordatevi di installare Anaconda sul vostro portatile. 
-    <LI>Se usate Windows lanciate il terminale da WSL per scaricare il programma.
+    <LI>Se usate Windows lanciate un nuovo browser da WSL per scaricare il programma.
     <LI>Scaricate il materiale del corso da github.
     <LI>Se incontrate difficoltà portate il laptop a lezione.
     </UL>
