--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -21,7 +21,7 @@ Passeremo poi agli esercizi 02.
     <LI>Ricordatevi di installare Anaconda sul vostro portatile. 
     <LI>Se usate Windows lanciate un nuovo browser da WSL per scaricare il programma.
     <LI>Scaricate il materiale del corso da github.
-    <LI>Se incontrate difficoltà portate il laptop a lezione.
+    <LI>Se incontrate difficolt&agrave; portate il laptop a lezione.
     </UL>
 </P>
 
