--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -10,26 +10,61 @@ STYLE="margin:100"
 
 <H3> 30 Settembre 2025</H3>
 <P>
+<FONT SIZE="+2">
     Cari studenti di TIF,
-per la prima lezione in aula informatica riguardate il notebook 01a_NotebookBasic.ipynb
+per la prima lezione in aula informatica (30/09-01/100 riguardate il notebook 01a_NotebookBasic.ipynb
 e il 02_Introduzione_a_Python fino a 2.7 compreso.<BR>
 Passeremo poi agli esercizi 02.
+</FONT> 
 </P>
 
 <P>
+<FONT SIZE="+2">
     <UL>
     <LI>Ricordatevi di installare Anaconda sul vostro portatile. 
     <LI>Se usate Windows lanciate un nuovo browser da WSL per scaricare il programma.
     <LI>Scaricate il materiale del corso da github.
     <LI>Se incontrate difficolt&agrave; portate il laptop a lezione.
     </UL>
+</FONT> 
 </P>
 
-
+<FONT SIZE="+2">
 Cordiali Saluti,<BR>&nbsp;<BR>
 
 Ezio Maina
 <BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
+
+<H3> 01 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,
+prima dei laboratori  del 02/10 e 03/10 studiate:
+</FONT> 
+
+<P>
+<FONT SIZE="+2">
+    <UL>
+    <LI> 02_Primi_passi dalla sezione 8 (Funzioni) alla fine
+    <LI> 03_Tipi_di_Dati fino alla sezione 4.5 inclusa
+    </UL>
+</FONT> 
+</P>
+
+<FONT SIZE="+2">
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
+
+
 
 </BODY>
 </HTML>
