--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -63,6 +63,24 @@ Ezio Maina
 </FONT> 
 
 
+<H3> 03 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+prima dei laboratori  del 06/10 e 07/10 completate il notebook 03 a partire dalla sezione 4.6.
+<BR>&nbsp;<BR>
+Nella seconda ora di ciascun laboratorio si terr&agrave; il primo test che sar&agrave; semplice.<BR>
+Potrete consultare i vostri appunti.<BR>
+Il test andr&agrave; sostenuto sulle macchine delle aule.<BR>
+Attenetevi ai turni stabiliti, altrimenti non avremo postazioni a sufficienza.
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
 
 
 
