--- a/html/05_input-output-files.html
+++ b/html/05_input-output-files.html
@@ -7922,7 +7922,7 @@ L'istruzione segue il nome della variabile da cui è separata dal simbolo ':'.
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>Quando è necessario costruire f-strings che si estendono su più righe il metodo
-più semplice è usare <code>"""</code> per delimitare la stringa</p>
+più semplice è usare <code>"""</code> (triplo doppio-apice) per delimitare la stringa</p>
 </div>
 </div>
 </div>
