--- a/html/08_plots.html
+++ b/html/08_plots.html
@@ -7917,6 +7917,17 @@ I metodi <code>set_title</code>, <code>set_xlabel</code>, <code>set_ylabel</code
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h2 id="Accortezze-per-fare-un-grafico-che-sia-sensato-e-utile">Accortezze per fare un grafico che sia sensato e utile<a class="anchor-link" href="#Accortezze-per-fare-un-grafico-che-sia-sensato-e-utile">¶</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Plot-multipli">Plot multipli<a class="anchor-link" href="#Plot-multipli">¶</a></h2><h3 id="Curve-multiple-in-un-singolo-plot">Curve multiple in un singolo plot<a class="anchor-link" href="#Curve-multiple-in-un-singolo-plot">¶</a></h3><p>È sufficiente dare il comando <code>plot</code> su un singolo <code>ax</code> per tutte le curve da disegnare</p>
 </div>
 </div>
@@ -8360,6 +8371,22 @@ Ciascuno dei comandi successivi si riferirà ad uno specifico oggetto <code>ax</
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<div style="width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px">
+<h4> Imparare Facendo</h4>
+<ol>
+<li>Fate l'istogramma dell'array a = np.array([22,87,5,43,56,73,55,54,11,20,51,5,79,31,27]). Qual'è un <b>range</b> ragionevole? Variate il numero di bin fra 1 e 10.
+</li></ol>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Altri-elementi-dei-plot">Altri elementi dei plot<a class="anchor-link" href="#Altri-elementi-dei-plot">¶</a></h2>
 </div>
 </div>
@@ -8525,22 +8552,6 @@ Se viene chiamato <code>legend</code> e nessuna delle curve ha un <code>label</c
 <span class="n">plt</span><span class="o">.</span><span class="n">text</span><span class="p">(</span><span class="mf">1.8</span><span class="p">,</span> <span class="mf">0.85</span><span class="p">,</span> <span class="sa">r</span><span class="s1">'$\Gamma(z)=\int_0^\infty x^{z-1}e^{-x}dx$'</span><span class="p">,</span> <span class="p">{</span><span class="s1">'color'</span><span class="p">:</span> <span class="s1">'k'</span><span class="p">,</span> <span class="s1">'fontsize'</span><span class="p">:</span> <span class="mi">14</span><span class="p">})</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">text</span><span class="p">(</span><span class="mf">4.0</span><span class="p">,</span> <span class="mf">0.40</span><span class="p">,</span> <span class="sa">r</span><span class="s1">'$\Gamma(z)=\int_0^\infty x^{z-1}e^{-x}dx$'</span><span class="p">,</span> <span class="p">{</span><span class="s1">'color'</span><span class="p">:</span> <span class="s1">'b'</span><span class="p">,</span> <span class="s1">'fontsize'</span><span class="p">:</span> <span class="mi">20</span><span class="p">})</span>
 </pre></div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<div style="width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px">
-<h4> Imparare Facendo</h4>
-<ol>
-<li>Fate l'istogramma dell'array a = np.array([22,87,5,43,56,73,55,54,11,20,51,5,79,31,27]). Qual'è un <b>range</b> ragionevole? Variate il numero di bin fra 1 e 10.
-</li></ol>
 </div>
 </div>
 </div>
