--- a/html/02_Introduzione_a_Python.html
+++ b/html/02_Introduzione_a_Python.html
@@ -9798,7 +9798,7 @@ Per verificarlo, assegniamo quanto restituito dalla funzione ad una variabile o 
 <span class="c1"># 2. Preparo input</span>
 <span class="n">raggio</span> <span class="o">=</span> <span class="mi">5</span>
 
-<span class="c1"># 3. Chiamo E assegno</span>
+<span class="c1"># 3. Chiamo e assegno</span>
 <span class="n">superficie</span> <span class="o">=</span> <span class="n">area_cerchio</span><span class="p">(</span><span class="n">raggio</span><span class="p">)</span>
 
 <span class="c1"># 4. Uso il risultato</span>
