--- a/html/03_Tipi_di_Dati.html
+++ b/html/03_Tipi_di_Dati.html
@@ -7693,7 +7693,7 @@ Python è un linguaggio interpretato i comandi vengono letti ed eseguiti sequenz
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Numeri reali in notazione scientifica: $1.3\, 10^{-4}$ si scrive 1.3e-4.</p>
+<p>Numeri reali in notazione scientifica: $1.3\, 10^{-4}$ si scrive 1.3e-4, $6.02\, 10^{3}$, si scrive 6.02e+3 oppure, in modo equivalente, 6.02e3.</p>
 </div>
 </div>
 </div>
@@ -7869,6 +7869,20 @@ Python è un linguaggio interpretato i comandi vengono letti ed eseguiti sequenz
 <span class="n">c</span> <span class="o">=</span> <span class="n">a</span> <span class="o">+</span> <span class="n">b</span><span class="o">*</span><span class="mi">1</span><span class="n">j</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">c</span><span class="p">)</span>
 </pre></div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<div style="width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#ff8c00; margin:20px 0px 10px 10px">
+    Perché <b>bj</b> oppure <b>b*j</b> non sarebbero modi accettabili di definire la parte immaginaria di un numero complesso
+    usando la variabile <b>b</b>?
 </div>
 </div>
 </div>
