--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -12,7 +12,7 @@ STYLE="margin:100"
 <P>
 <FONT SIZE="+2">
     Cari studenti di TIF,
-per la prima lezione in aula informatica (30/09-01/100 riguardate il notebook 01a_NotebookBasic.ipynb
+per la prima lezione in aula informatica (30/09-01/10) riguardate il notebook 01a_NotebookBasic.ipynb
 e il 02_Introduzione_a_Python fino a 2.7 compreso.<BR>
 Passeremo poi agli esercizi 02.
 </FONT> 
