--- a/html/03_Tipi_di_Dati.html
+++ b/html/03_Tipi_di_Dati.html
@@ -11232,7 +11232,7 @@ I singoli oggetti in una lista/stringa/tuple possono essere indicati con il loro
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Dizionari">Dizionari<a class="anchor-link" href="#Dizionari">¶</a></h2><p>I dizionari sono anche chiamati “associative arrays” o “hash tables”. I dizionari sono insiemi <em>unordered</em> di coppie <em>key-value</em>. Le keywords devono essere oggetti immutabili mentre i dizionari sono oggetti mutabili.</p>
+<h2 id="Dizionari">Dizionari<a class="anchor-link" href="#Dizionari">¶</a></h2><p>I dizionari sono anche chiamati “associative arrays” o “hash tables”. I dizionari sono insiemi <em>unordered</em> di coppie <em>key-value</em>. Le keywords devono essere oggetti immutabili (e unici) mentre i values possono essere oggetti mutabili.</p>
 <p>Un dizionario vuoto può essere creato usando parentesi graffe (curly braces):</p>
 </div>
 </div>
