--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -83,6 +83,21 @@ Ezio Maina
 </FONT> 
 
 
+<H3> 07 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+prima dei laboratori  del 08/10 e 09/10 studiate il notebook 04_control-flow.<BR>
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
 
 </BODY>
 </HTML>
