--- a/html/03_Tipi_di_Dati.html
+++ b/html/03_Tipi_di_Dati.html
@@ -11252,6 +11252,20 @@ I singoli oggetti in una lista/stringa/tuple possono essere indicati con il loro
 </div>
 </div>
 </div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper" tabindex="0">
@@ -11259,7 +11273,7 @@ I singoli oggetti in una lista/stringa/tuple possono essere indicati con il loro
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Coppie keyword-value possono essere aggiunti come segue:</p>
+<p>Coppie keyword-value possono essere aggiunti, a un dizionario esistente, come segue:</p>
 </div>
 </div>
 </div>
