--- a/html/03_Tipi_di_Dati.html
+++ b/html/03_Tipi_di_Dati.html
@@ -7529,7 +7529,7 @@ a.anchor-link {
         <li> Le ntuple
     </li></li></li></ul>
 <li> Come utilizzare gli indici.
-    <li> Come estrerre sezioni di sequenze
+    <li> Come estrarre sezioni di sequenze
     <li> Cosa sono i dizionari di Python
     <li> Come convertire un tipo in un altro
     <li> Come le variabili vengono immagazzinate in memoria. Tipi mutabili e immutabili.
@@ -11787,7 +11787,7 @@ Per eliminare una coppia key-value da un dizionario si può usare <code>del</cod
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [2]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">nazioni</span> <span class="o">=</span> <span class="p">{</span><span class="s1">'Francia'</span><span class="p">:{</span><span class="s1">'capitale'</span><span class="p">:</span><span class="s1">'Parigi'</span><span class="p">,</span><span class="s1">'popolazione'</span><span class="p">:</span><span class="mf">67.39e6</span><span class="p">},</span>
@@ -11843,6 +11843,60 @@ Per eliminare una coppia key-value da un dizionario si può usare <code>del</cod
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">nazioni</span><span class="p">[</span><span class="s1">'Germania'</span><span class="p">][</span><span class="s1">'popolazione'</span><span class="p">]</span>
 </pre></div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>Per inserire una nuova coppia chiave-valore nel dizionario interno si utilizza lo stesso tipo di indirizzamento:</p>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [4]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="n">nazioni</span><span class="p">[</span><span class="s1">'Germania'</span><span class="p">][</span><span class="s1">'superficie'</span><span class="p">]</span> <span class="o">=</span> <span class="s1">'357596 Kmq'</span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [5]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="n">nazioni</span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell-outputWrapper">
+<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
+</div>
+<div class="jp-OutputArea jp-Cell-outputArea">
+<div class="jp-OutputArea-child jp-OutputArea-executeResult">
+<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[5]:</div>
+<div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
+<pre>{'Francia': {'capitale': 'Parigi', 'popolazione': 67390000.0},
+ 'Germania': {'capitale': 'Berlino',
+  'popolazione': 83240000.0,
+  'superficie': '357596 Kmq'}}</pre>
 </div>
 </div>
 </div>
