--- a/html/04_control-flow.html
+++ b/html/04_control-flow.html
@@ -7520,7 +7520,7 @@ a.anchor-link {
 <h1 style="font-size:50px">4: Control Flow</h1>
 <div style="width:95%; padding:5px 10px 5px;  margin:50px 0px 10px 10px; font-size:18px">
 <ul>
-<li> Come prendere decisioni in un programma: <strong>if - (then) - else</strong>
+<li> Come prendere decisioni in un programma: <strong>if - (elif) - (else)</strong>
 <li> Come operare su sequenze: <strong>for</strong> e <strong>while</strong> loop
     <li> Come interrompere un loop    
     <li> Come usare <strong>if</strong> per selezionare all'interno di sequenze
@@ -7537,7 +7537,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="If-then-else">If-then-else<a class="anchor-link" href="#If-then-else">¶</a></h2><p>La costruzione <code>if</code> permette di eseguire del codice in modo condizionato. Dopo la parola chiave <code>if</code> deve essere presente una <em>condizione</em> seguita da due punti (<code>:</code>). Nella riga successiva inizia un blocco di comandi, che deve essere indentato, che viene eseguito se la condizione è soddisfatta (<code>True</code>). Il blocco di comandi termina quando finisce l'indentazione.</p>
+<h2 id="if-elif-else">if-elif-else<a class="anchor-link" href="#if-elif-else">¶</a></h2><p>La costruzione <code>if</code> permette di eseguire del codice in modo condizionato. Dopo la parola chiave <code>if</code> deve essere presente una <em>condizione</em> seguita da due punti (<code>:</code>). Nella riga successiva inizia un blocco di comandi, che deve essere indentato, che viene eseguito se la condizione è soddisfatta (<code>True</code>). Il blocco di comandi termina quando finisce l'indentazione.</p>
 </div>
 </div>
 </div>
