--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -98,6 +98,21 @@ Ezio Maina
 </FONT> 
 
 
+<H3> 10 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+prima dei laboratori  del 13/10 e 14/10 studiate il 05_input-output-files.ipynb.<BR>
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
 
 </BODY>
 </HTML>
