--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -113,6 +113,22 @@ Ezio Maina
 </FONT> 
 
 
+<H3> 12 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+
+trovate i risultati del primo test in https://www.to.infn.it/~maina/didattica/RisultatiTest1.pdf <BR>
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
 
 </BODY>
 </HTML>
