--- a/html/05_input-output-files.html
+++ b/html/05_input-output-files.html
@@ -8545,7 +8545,7 @@ This is a third and last line.</code></pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Questo metodo viene spesso utilizzato per iterare sulle linee, compiendo delle operzioni su ciascuna linea. Per esempio:</p>
+<p>Questo metodo viene spesso utilizzato per iterare sulle linee, compiendo delle operazioni su ciascuna linea. Per esempio:</p>
 </div>
 </div>
 </div>
