--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -129,7 +129,7 @@ Ezio Maina
 </FONT> 
 
 
-<H3> 12 Ottobre 2025</H3>
+<H3> 13 Ottobre 2025</H3>
 <P>
 
 <FONT SIZE="+2">
@@ -137,11 +137,11 @@ Cari studenti di TIF,<BR>&nbsp;<BR>
 
 prima dei laboratori del 15/10 e 16/10 studiate il notebook 06_funzioni_moduli.ipynb.
 <BR>&nbsp;<BR>
-Nella seconda ora di ciascun laboratorio si terrà il secondo test.<BR>
+Nella seconda ora di ciascun laboratorio si terr&agrave; il secondo test.<BR>
 
 Potrete consultare i vostri appunti.<BR>
 
-Il test andrà sostenuto sulle macchine delle aule.<BR>
+Il test andr&agrave; sostenuto sulle macchine delle aule.<BR>
 
 Attenetevi ai turni stabiliti, a meno di avermi informato in anticipo,
 altrimenti non avremo postazioni a sufficienza.<BR>
