--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -154,5 +154,34 @@ Ezio Maina
 </FONT> 
 
 
+<H3> 15 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+
+la prossima settimana sar&agrave; pi&ugrave; complicata del solito perch&eacute; entrambi i canali hanno lezione
+in due giorni successivi.
+<BR>&nbsp;<BR>
+Prima dei laboratori del 20-21/10 (A) e 22-23/10 (B) studiate il notebook 07_numpy.ipynb.
+Numpy &egrave; il fondamento di tutte le applicazioni scientifiche di Python.
+<BR>&nbsp;<BR>
+Nella seconda ora del laboratorio del 21/10 (A) e 23/10 (B) si terr&agrave; il terzo test.<BR>
+
+Potrete consultare i vostri appunti.<BR>
+
+Il test andr&agrave; sostenuto sulle macchine delle aule.<BR>
+
+Attenetevi ai turni stabiliti, a meno di avermi informato in anticipo,
+altrimenti non avremo postazioni a sufficienza.<BR>
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
 </BODY>
 </HTML>
