--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -182,6 +182,24 @@ Ezio Maina
 <BR>&nbsp;<BR><BR>&nbsp;<BR>
 </FONT> 
 
+<H3> 20 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+
+trovate i risultati del secondo test in https://www.to.infn.it/~maina/didattica/RisultatiTest2.pdf <BR>
+La lettera C indica le persone che non hanno potuto completare o inviare la prova perch&eacute; i computer
+si sono bloccati.<BR>
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
 
 </BODY>
 </HTML>
