--- a/html/08_plots.html
+++ b/html/08_plots.html
@@ -8353,7 +8353,7 @@ Ciascuno dei comandi successivi si riferirà ad uno specifico oggetto <code>ax</
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Istogrammi">Istogrammi<a class="anchor-link" href="#Istogrammi">¶</a></h2><p>I dati sono raggruppati in bin (contenitori, bidoni). L'altezza di ciascun bin corrisponde al numero di dati che cadono fra i due valori della variabile che definiscono la base del bin. Cambiando il numero di bin e/o i loro estremi si cambia il plot.</p>
+<h2 id="Istogrammi">Istogrammi<a class="anchor-link" href="#Istogrammi">¶</a></h2><p>I dati sono raggruppati in in intervalli o bin (contenitori, bidoni) che ricoprono il range di possibili valori della variabile che si sta studiando. L'altezza di ciascun bin è proporzionale al numero di dati che cadono fra i due valori della variabile che definiscono la base del bin. Cambiando il numero di bin e/o i loro estremi si cambia il plot.</p>
 </div>
 </div>
 </div>
