--- a/html/09_numpy_statistics.html
+++ b/html/09_numpy_statistics.html
@@ -7810,7 +7810,7 @@ Calcolate media e deviazione standard di <code>my_arr</code> usando i metodi <b>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Istogramma-delle-frequenze">Istogramma delle frequenze<a class="anchor-link" href="#Istogramma-delle-frequenze">¶</a></h2><p>L'istogramma delle frequenze è sovente il modo migliore per un primo esame dei dati</p>
+<h2 id="Istogramma-delle-frequenze">Istogramma delle frequenze<a class="anchor-link" href="#Istogramma-delle-frequenze">¶</a></h2><p>L'istogramma delle frequenze è sovente il modo migliore per un primo esame dei dati, mostrando con quale frequenza i valori in un dato intervallo o bin appaiono nei dati.</p>
 </div>
 </div>
 </div>
