--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -200,6 +200,23 @@ Ezio Maina
 </FONT> 
 
 
+<H3> 26 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+
+per la prima lezione, 27/10 per il Corso A, 30/10 per il Corso B, dovrete preparare
+il notebook 08_plots. Per la seconda, 29/10 per il Corso A, 31/10 per il Corso B,
+dovrete preparare il notebook 09_numpy_statistics.<BR>
+Nella seconda parte delle lezioni del 29 e 31 ci sar&agrave; il quarto test.<BR>
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
 
 </BODY>
 </HTML>
