--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -218,5 +218,22 @@ Ezio Maina
 <BR>&nbsp;<BR><BR>&nbsp;<BR>
 </FONT> 
 
+<H3> 27 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+
+trovate i risultati del terzo test in https://www.to.infn.it/~maina/didattica/RisultatiTest3.pdf <BR>
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
+
 </BODY>
 </HTML>
