--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -234,6 +234,21 @@ Ezio Maina
 </FONT> 
 
 
+<H3> 30 Ottobre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+la prossima settimana non avremo lezioni.<BR>
+Prima dei laboratori del 10-11/11 studiate il notebook 10_scipy.<BR>
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
 
 </BODY>
 </HTML>
