--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -202,7 +202,7 @@ Ezio Maina
 <P>
 
 <FONT SIZE="+2">
-Cari studenti di TIF,
+Cari studenti di TIF,<BR>&nbsp;<BR>
 prima dei laboratori  del 02/10 e 03/10 studiate:
 </FONT> 
 
@@ -226,7 +226,7 @@ Ezio Maina
 <H3> 30 Settembre 2025</H3>
 <P>
 <FONT SIZE="+2">
-    Cari studenti di TIF,
+    Cari studenti di TIF,<BR>&nbsp;<BR>
 per la prima lezione in aula informatica (30/09-01/10) riguardate il notebook 01a_NotebookBasic.ipynb
 e il 02_Introduzione_a_Python fino a 2.7 compreso.<BR>
 Passeremo poi agli esercizi 02.
