--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -9,6 +9,22 @@ STYLE="margin:100"
 >
 
 
+<H3> 04 Novembre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+
+trovate i risultati del quarto test in https://www.to.infn.it/~maina/didattica/RisultatiTest4.pdf <BR>
+
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
 <H3> 30 Ottobre 2025</H3>
 <P>
 
