--- a/comunicazioni_2025.html
+++ b/comunicazioni_2025.html
@@ -9,6 +9,21 @@ STYLE="margin:100"
 >
 
 
+<H3> 06 Novembre 2025</H3>
+<P>
+
+<FONT SIZE="+2">
+Cari studenti di TIF,<BR>&nbsp;<BR>
+prima dei laboratori  del 10-11/11 studiate il notebook 10_scipy.ipynb.<BR>
+Il 12-13/11 si terr&agrave; l'ultimo test.
+<BR>&nbsp;<BR>
+Cordiali Saluti,<BR>&nbsp;<BR>
+
+Ezio Maina
+<BR>&nbsp;<BR><BR>&nbsp;<BR>
+</FONT> 
+
+
 <H3> 04 Novembre 2025</H3>
 <P>
 
