--- a/html/10_scipy.html
+++ b/html/10_scipy.html
@@ -8724,8 +8724,8 @@ si chiama <em>ricerca delle radici</em> di $f$. Si noti che un problema del tipo
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Il metodo <code>bisect()</code> richiede obbligatoriamente tre argomenti: (i) la funzione <em>f(x)</em>, (ii) il limite inferiore <em>a</em> (che abbiamo scelto uguale a 1.5 nell'esempio) e (ii) il limite superiore <em>b</em> (scelto uguale a 3)  dell'intervallo in cui eseguire la procedura. Il parametro opzionale <code>xtol</code> determina l'errore massimo del metodo.</p>
-<p>Uno dei presupposti del metodo di bisezione è che l'intervallo [<em>a</em>, <em>b</em>] sia scelto in modo tale che la funzione abbia in <em>a</em> segno opposto a quello che ha in <em>b</em> in modo che nell'intervallo, se la funzione è continua, cada almeno una radice.</p>
+<p>Il metodo <code>bisect()</code> richiede obbligatoriamente tre argomenti: (i) la funzione <code>f(x)</code>, (ii) il limite inferiore <code>a</code> (che abbiamo scelto uguale a 1.5 nell'esempio) e (ii) il limite superiore <code>b</code> (scelto uguale a 3)  dell'intervallo in cui eseguire la procedura. Il parametro opzionale <code>xtol</code> determina l'errore massimo del metodo.</p>
+<p>Uno dei presupposti del metodo di bisezione è che l'intervallo [<code>a</code>, <code>b</code>] sia scelto in modo tale che la funzione abbia in <code>a</code> segno opposto a quello che ha in <code>b</code> in modo che nell'intervallo, se la funzione è continua, cada almeno una radice.</p>
 </div>
 </div>
 </div>
@@ -8834,9 +8834,9 @@ si chiama <em>ricerca delle radici</em> di $f$. Si noti che un problema del tipo
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Ottimizzazione-ovvero-trovare-minimi-(e-massimi)">Ottimizzazione ovvero trovare minimi (e massimi)<a class="anchor-link" href="#Ottimizzazione-ovvero-trovare-minimi-(e-massimi)">¶</a></h2><p>Spesso è necessario trovare il minimo o il massimo di una particolare funzione <em>f(x)</em> dove <em>f</em> è una funzione scalare mentre <em>x</em> può essere un vettore. Applicazioni tipiche sono la minimizzazione di quantità come il costo, il rischio o l'errore, oppure la massimizzazione della produttività, efficienza o profitto. Le routines di ottimizzazione tipicamente forniscono un metodo per minimizzare una funzione data: per massimizzare <em>f(x)</em> è sufficiente minimizzare <em>g(x)= − f(x)</em>.</p>
-<p>Di seguito, un esempio che mostra (i) la definizione della funzione <em>f(x)</em> da minimizzare e (ii) la chiamata a <code>scipy.optimize.fmin</code> a cui vengono passati la funzione <em>f</em> da minimizzare e un valore iniziale <em>x</em><sub>0</sub> da cui partire per la ricerca del minimo, e che restituisce il valore <em>x</em> per cui <em>f(x)</em> ha un minimo locale. Tipicamente, la ricerca del minimo è locale, nel senso che l'algoritmo segue il gradiente (derivata multidimensionale) nel punto in cui si trova.
-Facciamo come prima cosa il grafico della funzione. Il plot suggerisce che i due minimi più a destra possono essere cercati partendo dai due punti <em>x</em><sub>0</sub> = 1.0 e <em>x</em><sub>0</sub> = 2.0.</p>
+<h2 id="Ottimizzazione-ovvero-trovare-minimi-(e-massimi)">Ottimizzazione ovvero trovare minimi (e massimi)<a class="anchor-link" href="#Ottimizzazione-ovvero-trovare-minimi-(e-massimi)">¶</a></h2><p>Spesso è necessario trovare il minimo o il massimo di una particolare funzione <code>f(x)</code> dove <code>f</code> è una funzione scalare mentre <code>x</code> può essere un vettore. Applicazioni tipiche sono la minimizzazione di quantità come il costo, il rischio o l'errore, oppure la massimizzazione della produttività, efficienza o profitto. Le routines di ottimizzazione tipicamente forniscono un metodo per minimizzare una funzione data: per massimizzare <code>f(x)</code> è sufficiente minimizzare <code>g(x)= − f(x)</code>.</p>
+<p>Di seguito, un esempio che mostra (i) la definizione della funzione <code>f(x)</code> da minimizzare e (ii) la chiamata a <code>scipy.optimize.fmin</code> a cui vengono passati la funzione <code>f</code> da minimizzare e un valore iniziale <code>x0</code> da cui partire per la ricerca del minimo, e che restituisce il valore <code>xm</code> per cui <code>f(x)</code> ha un minimo. Tipicamente, la ricerca del minimo è locale, nel senso che l'algoritmo segue il gradiente (derivata multidimensionale) nel punto in cui si trova e non esplora tutto il range della funzione.
+Facciamo come prima cosa il grafico della funzione. Il plot suggerisce che i due minimi più a destra possono essere cercati partendo dai due punti <code>x0 = 1.0</code> e <code>x1 = 2.0</code>.</p>
 </div>
 </div>
 </div>
@@ -8974,10 +8974,11 @@ Facciamo come prima cosa il grafico della funzione. Il plot suggerisce che i due
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Fit-di-un-set-di-dati">Fit di un set di dati<a class="anchor-link" href="#Fit-di-un-set-di-dati">¶</a></h2><p>Scipy fornisce una funzione piuttosto flessibile (basato sull'algoritmo di Levenburg-Marquardt), <code>scipy.optimize.curve_fit</code>, per interpolare un set di dati. L'assunzione è che vengano dati un set di punti
 $x_1, x_2,\cdots,x_N$, i corrispondenti valori $y_i$ e una dipendenza funzionale $y=f(x,\vec{p})$.
-Per fare un esempio, il numero di atomi non decaduti in un campione di una sostanza radioattiva segue la legge
-$$ N(t,N_0,\tau) = N_0\,\exp\left(-\frac{t}{\tau}\right).$$
 Si vuole determinare i parametri $\vec{p}=(p_1, p_2, \ldots,p_k)$ in modo che $r$, la somma degli scarti quadratici fra la curva e i dati, sia la più piccola possibile:</p>
 <p>$$r = \sum\limits_{i=1}^N \left(y_i - f(x_i, \vec{p})\right)^2$$</p>
+<p>Per fare un esempio, il numero di atomi non decaduti in un campione di una sostanza radioattiva segue la legge
+$$ N(t,N_0,\tau) = N_0\,\exp\left(-\frac{t}{\tau}\right)$$
+dove $N_0$ e $\tau$ sono i parametri che vogliamo determinare dalla misura dei decadimenti.</p>
 <p>Questo approccio è particolarmente utile quando i dati sono affetti da <em>rumore</em>: per ogni coppia $x_i,y_i$ è presente un termine di errore (ignoto) $\epsilon_i$, tale che $y_i=f(x_i,\vec{p})+\epsilon_i$.</p>
 <p>Un esempio per chiarire: assumiamo di avere dei dati che sappiamo essere descritti dalla funzione:
 $$f(x,\vec{p}) = a \exp(-b x) + c,$$
